<resources>
    <string name="app_name">"SwissCovid"</string>
    <string name="CFBundleDisplayName">"SwissCovid"</string>
    <string name="loading_view_reload">"Reload"</string>
    <string name="loading_view_error_title">"Error"</string>
    <string name="force_update_title">"Update required"</string>
    <string name="inform_continue_button">"Continue"</string>
    <string name="inform_send_button_title">"Send"</string>
    <string name="inform_send_thankyou">"Thank you"</string>
    <string name="inform_send_thankyou_text">"The private keys generated by your app are sent.

Thank you for helping to break the chain of infection."</string>
    <string name="inform_fertig_button_title">"Close"</string>
    <string name="handshakes_title_homescreen">"Encounters"</string>
    <string name="cancel">"Cancel"</string>
    <string name="push_exposed_title">"New message"</string>
    <string name="push_exposed_text">"Open the app to read the message"</string>
    <string name="android_button_ok">"OK"</string>
    <string name="onboarding_continue_button">"Continue"</string>
    <string name="onboarding_finish_button">"Finish"</string>
    <string name="unexpected_error_title">"An unexpected error has occurred"</string>
    <string name="bluetooth_turned_off">"The app is not working because Bluetooth is turned off"</string>
    <string name="bluetooth_permission_turned_off">"The app is not working because Bluetooth is not permitted"</string>
    <string name="NSBluetoothPeripheralUsageDescription">"Encounters will be recognised in the background via low energy Bluetooth."</string>
    <string name="NSBluetoothAlwaysUsageDescription">"Encounters will be recognised in the background via low energy Bluetooth."</string>
    <string name="inform_code_title">"Enter the Covidcode"</string>
    <string name="inform_code_text">"Enter the Covidcode you have received."</string>
    <string name="inform_code_no_code">"Do you need help?"</string>
    <string name="tracing_setting_title">"Proximity tracing"</string>
    <string name="tracing_setting_text_ios">"COVID-19 Exposure Notifications"</string>
    <string name="bluetooth_setting_tracking_inactive">"Proximity tracing deactivated"</string>
    <string name="reports_title_homescreen">"Reports"</string>
    <string name="meldungen_no_meldungen_title">"No reports"</string>
    <string name="push_deactivated_title">"Messages deactivated"</string>
    <string name="push_deactivated_text">"Change the settings to receive information directly in the event of a report."</string>
    <string name="meldungen_meldung_title">"Possible infection"</string>
    <string name="meldungen_meldung_text">"An infection could have occurred"</string>
    <string name="tracing_active_title">"App active"</string>
    <string name="tracing_active_text">"Encounters will be registered anonymously."</string>
    <string name="android_tracing_error_title">"Proximity tracing not active"</string>
    <string name="android_foreground_service_notification_errors">"App currently unable to function properly"</string>
    <string name="preview_warning_title">"Version preview"</string>
    <string name="preview_warning_text">"This app provides a preview of how the DP-3T works. It is not a functioning COVID-19 tracker."</string>
    <string name="debug_settings_title">"Debug settings"</string>
    <string name="debug_state_setting_title">"Overwrite app status"</string>
    <string name="debug_state_setting_text">"This setting overwrites the app's visual status. Proximity tracing functionality remains unaffected."</string>
    <string name="debug_state_setting_option_none">"No overwrite"</string>
    <string name="debug_state_setting_option_ok">"Healthy"</string>
    <string name="debug_state_setting_option_exposed">"Contact has tested positive"</string>
    <string name="debug_state_setting_option_infected">"Reported yourself as positive"</string>
    <string name="debug_sdk_state_title">"SDK status"</string>
    <string name="debug_sdk_state_text">"Current status of DP-3T SDK"</string>
    <string name="debug_sdk_state_last_synced">"Last synchronisation"</string>
    <string name="debug_sdk_state_self_exposed">"Reported yourself"</string>
    <string name="debug_sdk_state_contact_exposed">"Contact reported"</string>
    <string name="debug_sdk_state_boolean_true">"Yes"</string>
    <string name="debug_sdk_state_boolean_false">"No"</string>
    <string name="debug_sdk_button_reset">"Reset SDK"</string>
    <string name="tab_tracing_title">"Proximity tracing"</string>
    <string name="whattodo_title_symptoms">"Symptoms of the disease"</string>
    <string name="whattodo_subtitle_symptoms">"What to do if …"</string>
    <string name="whattodo_title_positivetest">"you test positive"</string>
    <string name="whattodo_subtitle_positivetest">"What to do if …"</string>
    <string name="inform_detail_subtitle">"What to do if …"</string>
    <string name="inform_detail_title">"you test positive?"</string>
    <string name="inform_detail_box_subtitle">"With the Covidcode"</string>
    <string name="inform_detail_box_title">"Break the chains of infection"</string>
    <string name="inform_detail_box_button">"Enter the Covidcode"</string>
    <string name="inform_detail_box_text">"By entering the Covidcode, you tell the app that you have tested positive for the coronavirus."</string>
    <string name="symptom_detail_subtitle">"What do I do if …"</string>
    <string name="symptom_detail_title">"I feel ill?"</string>
    <string name="symptom_detail_box_subtitle">"If you experience COVID-19 symptoms…"</string>
    <string name="symptom_detail_box_title">"Getting tested"</string>
    <string name="symptom_detail_box_button">"Further information"</string>
    <string name="symptom_detail_box_text">"The FOPH recommends that anyone with COVID-19 symptoms should get tested. Call your doctor or your healthcare facility to schedule an appointment."</string>
    <string name="inform_detail_navigation_title">"Tested positive"</string>
    <string name="symptom_detail_navigation_title">"Symptoms"</string>
    <string name="tracing_turned_off_title">"Proximity tracing deactivated"</string>
    <string name="tracing_turned_off_text">"Activate proximity tracing so that the app works."</string>
    <string name="bluetooth_turned_off_title">"Bluetooth off"</string>
    <string name="bluetooth_turned_off_text">"Turn on Bluetooth on your device so that proximity tracing works."</string>
    <string name="bluetooth_turn_on_button_title">"Turn on Bluetooth"</string>
    <string name="bluetooth_permission_error_title">"Bluetooth use declined"</string>
    <string name="bluetooth_permission_error_text">"Enable the use of Bluetooth so that proximity tracing works."</string>
    <string name="push_open_settings_button">"Change settings"</string>
    <string name="meldungen_no_meldungen_subtitle">"No potential infections have been reported"</string>
    <string name="no_meldungen_box_title">"Protect yourself"</string>
    <string name="no_meldungen_box_subtitle">"What should I do?"</string>
    <string name="no_meldungen_box_text">"Follow the government recommendations on hygiene and social distancing."</string>
    <string name="meldung_detail_positive_tested_title">"Tested positive"</string>
    <string name="meldung_detail_positive_tested_subtitle">"You have tested positive for the coronavirus."</string>
    <string name="meldung_detail_positive_test_box_subtitle">"What should I do?"</string>
    <string name="meldung_detail_positive_test_box_title">"Isolation"</string>
    <string name="meldung_detail_positive_test_box_text">"Follow the instructions you receive on isolation."</string>
    <string name="tracing_ended_title">"Tracing deactivated"</string>
    <string name="tracing_ended_text">"No further encounters registered"</string>
    <string name="exposed_info_contact_hotline">"Contact the"</string>
    <string name="meldung_homescreen_positive_info_line1">"Follow the"</string>
    <string name="meldung_homescreen_positive_info_line2">"Instructions on self-isolation"</string>
    <string name="meldung_detail_exposed_new_meldung">"New report"</string>
    <string name="meldung_detail_exposed_title">"Potential infection"</string>
    <string name="meldung_homescreen_positiv_title">"Tested positive"</string>
    <string name="meldung_detail_exposed_subtitle">"An infection could have occurred"</string>
    <string name="meldung_homescreen_positiv_text">"You have tested positive for the coronavirus."</string>
    <string name="reset_onboarding">"Reset onboarding"</string>
    <string name="date_today">"Today"</string>
    <string name="date_days_ago">"{COUNT} days ago"</string>
    <string name="meldungen_detail_call">"Call us"</string>
    <string name="meldungen_detail_call_text">"SwissCovid infoline"</string>
    <string name="meldungen_detail_call_button">"Call now"</string>
    <string name="meldungen_detail_explanation_title">"Be careful!"</string>
    <string name="meldungen_detail_explanation_text1">"You could be infectious without realising it."</string>
    <string name="meldungen_detail_explanation_text2">"Please protect your family, your friends and those around you. Avoid contacts for up to 10 days after a possible infection."</string>
    <string name="onboarding_good_to_know">"Good to know"</string>
    <string name="faq_button_title">"FAQs"</string>
    <string name="infoline_tel_number">"+41 58 387 77 78"</string>
    <string name="onboarding_gaen_title">"Activate proximity tracing"</string>
    <string name="onboarding_gaen_button_activate">"Activate"</string>
    <string name="onboarding_gaen_info_title_1">"Data protection"</string>
    <string name="onboarding_gaen_info_text_1">"Only random IDs are exchanged, not data about your location or your person."</string>
    <string name="delete_reports_button">"Delete notification"</string>
    <string name="onboarding_gaen_text_android">"COVID-19 Exposure Notifications must be activated to use the app."</string>
    <string name="bottom_nav_tab_home">"SwissCovid"</string>
    <string name="bottom_nav_tab_stats">"Stats"</string>
    <string name="meldungen_tel_information_title">"Information by phone"</string>
    <string name="meldungen_tel_information_text">"If you have further questions, feel free to call the SwissCovid Infoline for information by phone."</string>
    <string name="tracing_reminder_radio_four_hours">"4 hours"</string>
    <string name="tracing_reminder_radio_eight_hours">"8 hours"</string>
    <string name="tracing_reminder_radio_twelve_hours">"12 hours"</string>
    <string name="tracing_reminder_radio_no_reminder">"No reminder"</string>
    <string name="tracing_reminder_title">"Set reminder"</string>
    <string name="tracing_reminder_subtitle">"SwissCovid can remind you to reactivate tracing."</string>
    <string name="tracing_reminder_warning">"Tracing is deactivated."</string>
    <string name="test_location_popup_title">"Where can I get a test?"</string>
    <string name="bottom_nav_tab_info"></string>
    <string name="home_covidcode_card_title"></string>
    <string name="home_covidcode_card_text"></string>
    <string name="events_footer_title1"></string>
    <string name="events_footer_title2"></string>
    <string name="events_footer_subtitle1"></string>
    <string name="events_footer_subtitle2"></string>
    <string name="meldung_detail_exposed_list_card_subtitle"></string>
    <string name="meldung_detail_exposed_list_card_title_checkin"></string>
    <string name="checkin_report_heading"></string>
    <string name="checkin_report_title1"></string>
    <string name="checkin_report_title2"></string>
    <string name="checkin_report_title3"></string>
    <string name="checkin_report_subtitle1"></string>
    <string name="checkin_report_subtitle2"></string>
    <string name="checkin_report_subtitle3"></string>
    <string name="onboarding_gaen_button_dont_activate"></string>
</resources>