<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent"
	android:layout_height="wrap_content"
	android:orientation="vertical">

	<TextView
		style="@style/NextStep.Text.Bold"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginHorizontal="@dimen/spacing_larger"
		android:text="@string/checkin_report_title1" />

	<TextView
		style="@style/NextStep.Text"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginHorizontal="@dimen/spacing_larger"
		android:layout_marginTop="@dimen/spacing_very_small"
		android:text="@string/checkin_report_subtitle1" />

	<TextView
		style="@style/NextStep.Text.Bold"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginHorizontal="@dimen/spacing_larger"
		android:layout_marginTop="@dimen/spacing_large"
		android:text="@string/checkin_report_title2" />

	<TextView
		style="@style/NextStep.Text"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginHorizontal="@dimen/spacing_larger"
		android:layout_marginTop="@dimen/spacing_very_small"
		android:text="@string/checkin_report_subtitle2" />

	<TextView
		style="@style/NextStep.Text.Bold"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginHorizontal="@dimen/spacing_larger"
		android:layout_marginTop="@dimen/spacing_large"
		android:text="@string/checkin_report_title3" />

	<TextView
		style="@style/NextStep.Text"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginHorizontal="@dimen/spacing_larger"
		android:layout_marginTop="@dimen/spacing_very_small"
		android:text="@string/checkin_report_subtitle3" />

	<LinearLayout
		android:id="@+id/tests_external_link"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginHorizontal="@dimen/spacing_medium_large"
		android:layout_marginTop="@dimen/spacing_medium"
		android:background="@drawable/ripple_button"
		android:orientation="horizontal"
		android:padding="@dimen/spacing_small">

		<ImageView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:src="@drawable/ic_launch_blue" />

		<TextView
			style="@style/NextStep.Text.Bold.Blue"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginStart="@dimen/spacing_medium"
			android:text="@string/checkin_report_link" />
	</LinearLayout>

	<LinearLayout
		android:id="@+id/phone_section"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:orientation="vertical">

		<TextView
			style="@style/NextStep.Text.Bold"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginHorizontal="@dimen/spacing_larger"
			android:layout_marginTop="@dimen/spacing_large"
			android:text="@string/meldungen_tel_information_title" />

		<TextView
			style="@style/NextStep.Text"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginHorizontal="@dimen/spacing_larger"
			android:layout_marginTop="@dimen/spacing_very_small"
			android:text="@string/meldungen_tel_information_text" />

		<LinearLayout
			android:id="@+id/item_call_hotline_layout"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginHorizontal="@dimen/spacing_medium_large"
			android:layout_marginTop="@dimen/spacing_medium"
			android:background="@drawable/ripple_button"
			android:orientation="horizontal"
			android:padding="@dimen/spacing_small">

			<ImageView
				android:layout_width="@dimen/icon_size"
				android:layout_height="@dimen/icon_size"
				android:src="@drawable/ic_call"
				android:tint="@color/blue_main" />

			<TextView
				android:id="@+id/item_call_hotline_text"
				style="@style/NextStep.Text.Bold.Blue"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginLeft="@dimen/spacing_small"
				android:text="@string/infoline_tel_number" />

		</LinearLayout>

	</LinearLayout>

</LinearLayout>
