<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="wrap_content"
	android:orientation="vertical">

	<androidx.cardview.widget.CardView
		style="@style/NextStep.Card"
		android:layout_width="match_parent"
		android:layout_height="wrap_content">

		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:orientation="vertical">

			<TextView
				style="@style/NextStep.Text.Bold.Blue"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginHorizontal="@dimen/spacing_large"
				android:layout_marginTop="@dimen/spacing_large"
				android:text="@string/meldung_detail_exposed_list_card_subtitle" />

			<TextView
				style="@style/NextStep.Text.Title"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginHorizontal="@dimen/spacing_large"
				android:layout_marginTop="@dimen/spacing_very_small"
				android:text="@string/meldung_detail_exposed_list_card_title_checkin" />

			<TextView
				android:id="@+id/report_details"
				style="@style/NextStep.Text.Bold"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginHorizontal="@dimen/spacing_large"
				android:lineSpacingExtra="@dimen/spacing_very_small"
				tools:text="20.10.2020 / vor 2 Tagen \n22.10.2020 / vor 4 Tagen" />

			<TextView
				android:id="@+id/place"
				style="@style/NextStep.Text"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginHorizontal="@dimen/spacing_large"
				android:layout_marginTop="@dimen/spacing_very_small"
				tools:text="Reuss Ubique" />

			<View
				android:layout_width="match_parent"
				android:layout_height="@dimen/separator_height"
				android:layout_marginTop="@dimen/spacing_medium_large"
				android:background="@color/grey_light" />

			<TextView
				style="@style/NextStep.Text.Bold.Blue"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginHorizontal="@dimen/spacing_large"
				android:layout_marginTop="@dimen/spacing_large"
				android:text="@string/checkin_report_heading" />

			<TextView
				style="@style/NextStep.Text.Title"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginHorizontal="@dimen/spacing_large"
				android:layout_marginTop="@dimen/spacing_large"
				android:text="@string/checkin_report_title1" />

			<TextView
				style="@style/NextStep.Text"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginHorizontal="@dimen/spacing_large"
				android:layout_marginTop="@dimen/spacing_very_small"
				android:text="@string/checkin_report_subtitle1" />

			<TextView
				style="@style/NextStep.Text.Title"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginHorizontal="@dimen/spacing_large"
				android:layout_marginTop="@dimen/spacing_large"
				android:text="@string/checkin_report_title2" />

			<TextView
				style="@style/NextStep.Text"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginHorizontal="@dimen/spacing_large"
				android:layout_marginTop="@dimen/spacing_very_small"
				android:text="@string/checkin_report_subtitle2" />

			<TextView
				style="@style/NextStep.Text.Title"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginHorizontal="@dimen/spacing_large"
				android:layout_marginTop="@dimen/spacing_large"
				android:text="@string/checkin_report_title3" />

			<TextView
				style="@style/NextStep.Text"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginHorizontal="@dimen/spacing_large"
				android:layout_marginTop="@dimen/spacing_very_small"
				android:text="@string/checkin_report_subtitle3" />

			<LinearLayout
				android:id="@+id/testlocations_link"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginHorizontal="@dimen/spacing_medium_large"
				android:layout_marginTop="@dimen/spacing_medium"
				android:background="?selectableItemBackground"
				android:orientation="horizontal"
				android:padding="@dimen/spacing_small"
				app:layout_constrainedWidth="true"
				app:layout_constraintEnd_toEndOf="parent"
				app:layout_constraintHorizontal_bias="0"
				app:layout_constraintStart_toStartOf="parent"
				app:layout_constraintTop_toBottomOf="@id/info_box_container_layout">

				<ImageView
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:src="@drawable/ic_link_internal" />

				<TextView
					style="@style/NextStep.Text.Bold.Blue"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_marginStart="@dimen/spacing_medium"
					android:text="@string/test_location_popup_title" />
			</LinearLayout>

			<View
				android:layout_width="match_parent"
				android:layout_height="1dp"
				android:layout_marginTop="@dimen/spacing_larger"
				android:background="@color/grey_light" />

			<TextView
				android:id="@+id/delete_report"
				style="@style/NextStep.Button.Transparent"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginVertical="10dp"
				android:gravity="center"
				android:paddingTop="15dp"
				android:paddingBottom="10dp"
				android:text="@string/delete_reports_button"
				android:textAllCaps="true"
				android:textColor="@color/blue_main"
				app:layout_constraintBottom_toBottomOf="parent"
				app:layout_constraintEnd_toEndOf="parent"
				app:layout_constraintStart_toStartOf="parent"
				app:layout_constraintTop_toBottomOf="@id/card_encounters_image" />

		</LinearLayout>

	</androidx.cardview.widget.CardView>

	<Button
		android:id="@+id/faq_button"
		style="@style/NextStep.Button.Outlined"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginHorizontal="@dimen/spacing_medium"
		android:layout_marginVertical="@dimen/spacing_huger"
		android:drawableEnd="@drawable/ic_launch_blue"
		android:paddingStart="@dimen/padding_start_icon_button"
		android:text="@string/faq_button_title" />

</LinearLayout>